# bearclave-zkvm

./: .gitignore  Makefile  README.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: on-prs.yml  on-schedule.yml
factors-verifier/: Cargo.toml  README.md
factors-verifier/host/: Cargo.toml
factors-verifier/host/src/: lib.rs  main.rs
factors-verifier/methods/: Cargo.toml
factors-verifier/methods/guest/: Cargo.toml
nitro-verifier/: Cargo.toml  Makefile  README.md
nitro-verifier/.cargo/: audit.toml
nitro-verifier/host/: Cargo.toml
nitro-verifier/host/src/: lib.rs  main.rs
nitro-verifier/methods/: Cargo.toml
nitro-verifier/methods/guest/: Cargo.toml
nitro-verifier/methods/guest/src/: main.rs
sev-verifier/: Cargo.toml  README.md
sev-verifier/host/: Cargo.toml
sev-verifier/host/src/: lib.rs  main.rs
sev-verifier/methods/: Cargo.toml
sev-verifier/methods/guest/: Cargo.toml
tdx-verifier/: Cargo.toml  README.md
tdx-verifier/host/: Cargo.toml
tdx-verifier/host/src/: lib.rs  main.rs
tdx-verifier/methods/: Cargo.toml
tdx-verifier/methods/guest/: Cargo.toml
