[package]
categories = ["cryptography"]
description = "A RISC0 zkVM for verifying AMD SEV-SNP Attestations"
edition = "2024"
keywords = ["zkvm", "risc0", "amd-sev-snp", "attestation"]
license = "UNLICENSED"
name = "sev-verifier-methods"
readme = "../README.md"
repository = "https://github.com/tahardi/bearzero"
version = "0.1.0"

[build-dependencies]
risc0-build = { version = "^3.0.4" }

[package.metadata.risc0]
methods = ["guest"]
